# templates

./: README.md
docker-compose-template/app/rmqtt/: docker-compose.yaml
docker-compose-template/app/rmqtt/etc/: rmqtt.toml
docker-compose-template/app/rmqtt/etc/plugins/: rmqtt-acl.toml  rmqtt-auth-http.toml  rmqtt-cluster-raft.toml  rmqtt-http-api.toml  rmqtt-web-hook.toml
rmqtt-acl/: rmqtt-acl.toml
rmqtt-auth-http-server/go/: go.mod  server.go
rmqtt-auth-http-server/python/: server.py
rmqtt-auth-http-server/rust/: Cargo.toml
rmqtt-auth-http-server/rust/src/: main.rs
rmqtt-web-hook-server/go/: go.mod  go.sum  server.go
rmqtt-web-hook-server/python/: server.py  start.sh
