[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros"] }
salvo = { version = "0.37.9", features = ["affix"] }
time = "=0.3.20"
anyhow = "1.0"